--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
+    "luxon": "^1.26.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
